# snsphd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  publish_new.sh  pyproject.toml  pyproject_old.toml
.github/workflows/: publish_pypi.yml
src/snsphd/: __init__.py  clock.py  help.py  hist.py  layout.py  obj.py  viz.py
