[tool.poetry]
name = "snsphd"
version = "0.1.1"
description = "Utility and styling functions for A. Mueller's phd thesis"
authors = ["Andrew Mueller <andrewstermueller@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sansseriff/snsphd"
repository = "https://github.com/sansseriff/snsphd"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
orjson = "^3.9.1"
scipy = "^1.11.1"
bokeh = "^3.2.0"
numba = "^0.57.1"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
