[tool.poetry]
name = "snsphd"
version = "0.2.0"
description = "Utility and styling functions for A. Mueller's phd thesis"
authors = ["Andrew Mueller <andrewstermueller@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sansseriff/snsphd"
repository = "https://github.com/sansseriff/snsphd"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0"
matplotlib = "^3.7.2"
orjson = "^3.9.1"
# Optional (install via extras)
scipy = { version = "^1.11.1", optional = true }
bokeh = { version = "^3.2.0", optional = true }
ipython = { version = "^8.14.0", optional = true }

[tool.poetry.extras]
# Install scientific fitting utilities (hist.py)
scipy = ["scipy"]
# Visualization utilities (viz.py)
viz = ["bokeh", "ipython"]
# Everything optional
all = ["scipy", "bokeh", "ipython"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# try runnning "poetry build" and then "poetry publish" to update pypi
